<?xml version="1.0" encoding="utf-8"?>
<io.gameper.gampingmall.presentation.main.MainView
        android:id="@+id/mainBaseViewLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.MainActivity">

    <!-- temp -->

    <LinearLayout
            android:id="@+id/tempEmailContainer"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:layout_height="wrap_content"
            android:elevation="100dp">

        <RadioGroup
                android:id="@+id/tempIdSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:id="@+id/yun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/name_yun"/>

            <RadioButton
                    android:id="@+id/lee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_lee"/>

            <RadioButton
                    android:id="@+id/ko"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_ko"/>
        </RadioGroup>

        <Button
                android:id="@+id/btnTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="설정"/>

    </LinearLayout>
</io.gameper.gampingmall.presentation.main.MainView>